inline plotting on ebrains

--- a/vclamp-to-ap-trajec.ipynb
+++ b/vclamp-to-ap-trajec.ipynb
@@ -71,6 +71,7 @@
     }
    ],
    "source": [
+    "%matplotlib inline\n",
     "from neuron import h\n",
     "h.load_file(\"stdrun.hoc\") # provides h.run()\n"
    ]
